# sigopt-config

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierignore  .pylintrc  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  pp  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.circleci/: config.yml
.github/workflows/: coverity.yml  pre-commit.yml  scorecard.yml  security.yml  tests.yml
sigopt_config/: utils.py
src/js/sigopt_config/: broker.js  constants.js  env.js  exceptions.js  index.js  object.js  utils.js  vault.js
src/js/sigopt_config/__mocks__/: got.js
src/js/sigopt_config/__tests__/: broker.js
src/python/sigopt_config/: broker.py  source.py  utils.py
src/python/sigopt_config/vault_secrets/: client.py  login.py  source.py
test/: config_test.py  js_config_loader.js
test/cases/01_single_config/config/: 00_only_config.yaml
test/cases/02_basic_extend/: test.yaml
test/cases/02_basic_extend/config/: 00_address.yaml  01_db.yaml
test/cases/03_nested_extend/: test.yaml
test/cases/03_nested_extend/config/: 00_static_dir.yaml  01_static_cache_age.yaml
test/cases/04_null_delete/: test.yaml
test/cases/04_null_delete/config/: 00_top.yaml  01_middle.yaml  02_bottom.yaml
test/python/sigopt_config/: test_broker.py
tools/: set_python_path.sh
