[metadata]
name = sigopt_config
version = 0.0.1
description = SigOpt configuration helper library
license = Apache-2.0
url = https://sigopt.org
maintainer = SigOpt
maintainer_email = support@sigopt.com
long_description = SigOpt configuration helper library
classifiers =
  Development Status :: 1 - Planning

[options]
python_requires = >=3.7
packages = find_namespace:
package_dir =
  =src/python

install_requires = file: requirements.txt

[options.packages.find]
exclude=
  test*
  tools*
where = src/python
include = sigopt*

[flake8]
ignore=E129,E127,E203,E302,E131,E111,E114,E121,E501,E126,E123,E305,E402,I101,I100,N806,F403,E241,E731,F999,F401,F405,W503,T001,E741,W504
