[metadata]
name = sigopt_config
version = 2.0.0-dev1
description = SigOpt configuration helper library
license = Apache-2.0
url = https://sigopt.org
maintainer = SigOpt
maintainer_email = support@sigopt.com
long_description = SigOpt configuration helper library
classifiers =
  Development Status :: 1 - Planning

[options]
python_requires = >=3.7
packages = find_namespace:
package_dir =
  =src/python
include_package_data = True
install_requires = file: requirements.txt

[options.package_data]
sigopt_config =
  py.typed

[options.packages.find]
exclude=
  test*
  tools*
where = src/python
include = sigopt_config*

[flake8]
ignore=E129,E127,E203,E302,E131,E111,E114,E121,E501,E126,E123,E305,E402,I101,I100,N806,F403,E241,E731,F999,F401,F405,W503,T001,E741,W504

[isort]
combine_star=True
force_grid_wrap=0
include_trailing_comma=True
indent='  '
line_length=120
lines_after_imports=2
sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
use_parentheses=True
multi_line_output=3
